--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -20,6 +20,7 @@
             <li> <a href="/Admin/OfferDiscount/Index"> <i class="fa fa-plus"></i><span>İndirim Teklifleri</span></a> </li>
             <li> <a href="/Admin/Brand/Index"> <i class="fa fa-bullseye"></i><span>Markalar</span></a> </li>
             <li> <a href="/Admin/About/Index"> <i class="fa fa-address-book"></i><span>Hakkımda</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-comment"></i><span>Yorumlar</span></a> </li>
         </ul>
     </section>
 </aside>
