--- a/Frontends/MultiShop.WebUI/Views/Contact/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Contact/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model CreateContactDto
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/UILayout/_UILayout.cshtml";
@@ -21,31 +22,31 @@
         <div class="col-lg-7 mb-5">
             <div class="contact-form bg-light p-30">
                 <div id="success"></div>
-                <form name="sentMessage" id="contactForm" novalidate="novalidate">
+                <form method="post">
                     <div class="control-group">
-                        <input type="text" class="form-control" id="name" placeholder="Adınız"
-                               required="required" data-validation-required-message="Please enter your name" />
+                        <input type="text" class="form-control" id="name" placeholder="Adınız Soyadınız"
+                               required="required" data-validation-required-message="Lütfen boş geçmeyin" asp-for="NameSurname" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
                         <input type="email" class="form-control" id="email" placeholder="Email Adresiniz"
-                               required="required" data-validation-required-message="Please enter your email" />
+                               required="required" data-validation-required-message="Lütfen boş geçmeyin" asp-for="Email" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
                         <input type="text" class="form-control" id="subject" placeholder="Konu"
-                               required="required" data-validation-required-message="Please enter a subject" />
+                               required="required" data-validation-required-message="Lütfen boş geçmeyin" asp-for="Subject" />
                         <p class="help-block text-danger"></p>
                     </div>
                     <div class="control-group">
                         <textarea class="form-control" rows="8" id="message" placeholder="Mesajınız"
                                   required="required"
-                                  data-validation-required-message="Please enter your message"></textarea>
+                                  data-validation-required-message="Lütfen boş geçmeyin" asp-for="Message"></textarea>
                         <p class="help-block text-danger"></p>
                     </div>
                     <div>
                         <button class="btn btn-primary py-2 px-4" type="submit" id="sendMessageButton">
-                            Mesaj
+                            Mesajı
                             Gönder
                         </button>
                     </div>
