--- a/Frontends/MultiShop.WebUI/Views/Login/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model CreateLoginDto
+
 @{
     Layout = null;
 }
@@ -33,11 +34,11 @@
                 <h2>MultiShop Giriş Formu</h2>
                 <div class="form-row">
                     <label for="your_email">Kullanıcı Adınız</label>
-                    <input type="text" id="your_username" class="input-text" required>
+                    <input type="text" id="your_username" asp-for="UserName" class="input-text" required>
                 </div>
                 <div class="form-row">
                     <label for="your_password">Şifreniz</label>
-                    <input type="password" id="your_password" class="input-text" required>
+                    <input type="password" id="your_password" asp-for="Password" class="input-text" required>
                 </div>
                 <div class="form-row-last">
                     <input type="submit" name="register" class="register" value="Giriş Yap">
