--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailReviewComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailReviewComponentPartial/Default.cshtml
@@ -53,6 +53,6 @@
                 </div>
             }
         </div>
-        @await Html.PartialAsync("~/Views/ProductList/AddComment.cshtml", new { id = ViewBag.x })
+        @await Html.PartialAsync("~/Views/ProductList/AddComment.cshtml", new { id = ViewBag.x, pid = ViewBag.pid })
     </div>
 </div>
