--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -21,6 +21,16 @@
             <li> <a href="/Admin/Brand/Index"> <i class="fa fa-bullseye"></i><span>Markalar</span></a> </li>
             <li> <a href="/Admin/About/Index"> <i class="fa fa-address-book"></i><span>Hakkımda</span></a> </li>
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-comment"></i><span>Yorumlar</span></a> </li>
+            <li> <a href="/Admin/User/UserList"> <i class="fa fa-users"></i><span>Kullanıcı Listesi</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-shopping-basket"></i><span>Sipariş Listesi</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-suitcase"></i><span>Kasa Bilgileri</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-pie-chart"></i><span>İstatistikler</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-bus"></i><span>Kargo</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-balance-scale"></i><span>İndirimleri</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-picture-o"></i><span>Görseller</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-paper-plane"></i><span>Mesajlar</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-cog"></i><span>Ayarlar</span></a> </li>
+            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-window-close"></i><span>Çıkış Yap</span></a> </li>
         </ul>
     </section>
 </aside>
