--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,4 +13,6 @@
 @using MultiShop.DtoLayer.CommentDtos
 @using MultiShop.DtoLayer.OrderDtos.OrderOrderingDtos
 @using MultiShop.DtoLayer.IdentityDtos.UserDtos
+@using MultiShop.DtoLayer.CargoDtos.CargoCompanyDtos
+@using MultiShop.DtoLayer.CargoDtos.CargoCustomerDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
