--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -29,7 +29,7 @@
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-picture-o"></i><span>Görseller</span></a> </li>
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-paper-plane"></i><span>Mesajlar</span></a> </li>
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-cog"></i><span>Ayarlar</span></a> </li>
-            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-window-close"></i><span>Çıkış Yap</span></a> </li>
+            <li> <a href="/Login/Logout"> <i class="fa fa-window-close"></i><span>Çıkış Yap</span></a> </li>
         </ul>
     </section>
 </aside>
