--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -38,6 +38,10 @@
                                 <a href="checkout.html" class="dropdown-item">Ödeme</a>
                                 <a href="/Register/Index/" class="dropdown-item">Kayıt Ol</a>
                                 <a href="/Login/Index/" class="dropdown-item">Giriş Yap</a>
+                                @if (ViewBag.isLogin)
+                                {
+                                    <a href="/Login/Logout/" class="dropdown-item">Çıkış Yap</a>
+                                }
                             </div>
                         </div>
                         <a href="/Contact/Index" class="nav-item nav-link">İletişim</a>
