Added Sending mail codes

--- a/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/Admin/Views/Shared/Components/_AdminLayoutSidebarComponentPartial/Default.cshtml
@@ -23,7 +23,7 @@
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-comment"></i><span>Yorumlar</span></a> </li>
             <li> <a href="/Admin/User/UserList"> <i class="fa fa-users"></i><span>Kullanıcı Listesi</span></a> </li>
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-suitcase"></i><span>Kasa Bilgileri</span></a> </li>
-            <li> <a href="/Admin/Comment/Index"> <i class="fa fa-pie-chart"></i><span>İstatistikler</span></a> </li>
+            <li> <a href="/Admin/Statistic/Index"> <i class="fa fa-pie-chart"></i><span>İstatistikler</span></a> </li>
             <li> <a href="/Admin/Cargo/CargoCompanyList"> <i class="fa fa-bus"></i><span>Kargo</span></a> </li>
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-balance-scale"></i><span>İndirimleri</span></a> </li>
             <li> <a href="/Admin/Comment/Index"> <i class="fa fa-picture-o"></i><span>Görseller</span></a> </li>
