--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ResultCategoryDto>
+﻿@inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
+@model List<ResultCategoryDto>
 
 <div class="container-fluid bg-dark mb-30">
     <div class="row px-xl-5">
@@ -27,8 +28,8 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="/Default/Index" class="nav-item nav-link">Ana Sayfa</a>
-                        <a href="/ProductList/Index" class="nav-item nav-link">Ürünler</a>
+                        <a href="/Default/Index" class="nav-item nav-link">@localizer["Ana Sayfa"]</a>
+                        <a href="/ProductList/Index" class="nav-item nav-link">@localizer["Ürünler"]</a>
                         <a href="/ProductList/ProductDetail" class="nav-item nav-link">Ürün Detayları</a>
                         <a href="detail.html" class="nav-item nav-link">Günün Fırsatı</a>
                         <div class="nav-item dropdown">
