--- a/Frontends/MultiShop.WebUI/Areas/User/Views/Shared/Components/_UserLayoutSideBarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/User/Views/Shared/Components/_UserLayoutSideBarComponentPartial/Default.cshtml
@@ -11,7 +11,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/charts/chartjs.html">
+            <a class="nav-link" href="/User/myorder/myorderlist">
                 <i class="mdi mdi-chart-pie menu-icon"></i>
                 <span class="menu-title">Aktif Siparişlerim</span>
             </a>
@@ -29,15 +29,15 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/icons/mdi.html">
+            <a class="nav-link" href="/User/Message/SendBox">
                 <i class="mdi mdi-emoticon menu-icon"></i>
-                <span class="menu-title">Profilim</span>
+                <span class="menu-title">Gönderilen Mesajlarım</span>
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/icons/mdi.html">
+            <a class="nav-link" href="/User/Message/Inbox">
                 <i class="mdi mdi-emoticon menu-icon"></i>
-                <span class="menu-title">Mesajlarım</span>
+                <span class="menu-title">Gelen Mesajlarım</span>
             </a>
         </li>
         <li class="nav-item">
@@ -47,7 +47,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="../../pages/icons/mdi.html">
+            <a class="nav-link" href="/Login/Logout">
                 <i class="mdi mdi-emoticon menu-icon"></i>
                 <span class="menu-title">Çıkış Yap</span>
             </a>
