--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_FooterUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_FooterUILayoutComponentPartial/Default.cshtml
@@ -17,8 +17,8 @@
                 <div class="col-md-4 mb-5">
                     <h5 class="text-secondary text-uppercase mb-4">Hızlı Alışveriş</h5>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ana Sayfa</a>
-                        <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Ürünlerimiz</a>
+                        <a class="text-secondary mb-2" href="/Default/Index"><i class="fa fa-angle-right mr-2"></i>Ana Sayfa</a>
+                        <a class="text-secondary mb-2" href="/ProductList/Index"><i class="fa fa-angle-right mr-2"></i>Ürünlerimiz</a>
                         <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Günün Fırsatı</a>
                         <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>İndirimler</a>
                         <a class="text-secondary mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Sepetim</a>
