--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_VendorDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_VendorDefaultComponentPartial/Default.cshtml
@@ -6,7 +6,7 @@
             <div class="owl-carousel vendor-carousel">
                 @foreach (var item in Model)
                 {
-                    <div class="bg-light p-4" style="height:235px; width:330px;">
+                    <div class="bg-light p-4" style="height:235px; width:330px; object-fit: contain">
                         <img src="@item.ImageUrl" alt="">
                     </div>
                 }
