--- a/Frontends/MultiShop.WebUI/Areas/User/Views/Shared/Components/_UserLayoutNavbarComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/User/Views/Shared/Components/_UserLayoutNavbarComponentPartial/Default.cshtml
@@ -7,7 +7,7 @@
             <a class="navbar-brand brand-logo" href="../../index.html"><img src="~/spica-1.0.0/images/logo.svg" alt="logo" /></a>
             <a class="navbar-brand brand-logo-mini" href="../../index.html"><img src="~/spica-1.0.0/images/logo-mini.svg" alt="logo" /></a>
         </div>
-        <h4 class="font-weight-bold mb-0 d-none d-md-block mt-1">Tekrar hoş geldin, Utku Çakar</h4>
+        <h4 class="font-weight-bold mb-0 d-none d-md-block mt-1">Tekrar hoş geldin, @ViewBag.userName</h4>
         <ul class="navbar-nav navbar-nav-right">
             <li class="nav-item">
                 <h4 class="mb-0 font-weight-bold d-none d-xl-block">@(((DateTime.Now)).ToString("dd-MMM-yyyy"))</h4>
@@ -15,10 +15,10 @@
             <li class="nav-item dropdown mr-1">
                 <a class="nav-link count-indicator dropdown-toggle d-flex justify-content-center align-items-center" id="messageDropdown" href="#" data-toggle="dropdown">
                     <i class="mdi mdi-calendar mx-0"></i>
-                    <span class="count bg-info">2</span>
+                    <span class="count bg-info">@ViewBag.inboxMessageCount</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="messageDropdown">
-                    <p class="mb-0 font-weight-normal float-left dropdown-header">Messages</p>
+                    <p class="mb-0 font-weight-normal float-left dropdown-header">Gelen Kutusu</p>
                     <a class="dropdown-item preview-item">
                         <div class="preview-thumbnail">
                             <img src="../../images/faces/face4.jpg" alt="image" class="profile-pic">
@@ -63,10 +63,10 @@
             <li class="nav-item dropdown mr-2">
                 <a class="nav-link count-indicator dropdown-toggle d-flex align-items-center justify-content-center" id="notificationDropdown" href="#" data-toggle="dropdown">
                     <i class="mdi mdi-email-open mx-0"></i>
-                    <span class="count bg-danger">1</span>
+                    <span class="count bg-danger">@ViewBag.sendboxMessageCount</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
-                    <p class="mb-0 font-weight-normal float-left dropdown-header">Notifications</p>
+                    <p class="mb-0 font-weight-normal float-left dropdown-header">Gönderilen Mesajlar</p>
                     <a class="dropdown-item preview-item">
                         <div class="preview-thumbnail">
                             <div class="preview-icon bg-success">
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="preview-item-content">
-                            <h6 class="preview-subject font-weight-normal">Settings</h6>
+                            <h6 class="preview-subject font-weight-normal">Ayarlar</h6>
                             <p class="font-weight-light small-text mb-0 text-muted">
                                 Private message
                             </p>
@@ -125,16 +125,16 @@
             <li class="nav-item nav-profile dropdown">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
                     <img src="~/spica-1.0.0/images/faces/face5.jpg" alt="profile" />
-                    <span class="nav-profile-name">Utku Çakar</span>
+                    <span class="nav-profile-name">@ViewBag.userName</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
                     <a class="dropdown-item">
                         <i class="mdi mdi-settings text-primary"></i>
-                        Settings
+                        Ayarlar
                     </a>
                     <a class="dropdown-item">
                         <i class="mdi mdi-logout text-primary"></i>
-                        Logout
+                        Çıkış Yap
                     </a>
                 </div>
             </li>
