--- a/Frontends/MultiShop.WebUI/Views/ProductList/AddComment.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/ProductList/AddComment.cshtml
@@ -1,18 +1,21 @@
 ﻿<div class="col-md-6">
     <h4 class="mb-4">Bir Yorum Yapın</h4>
     <small>Yorumunuzun alınması için geçerli bir email adresi giriniz.*</small>
-    <div class="d-flex my-3">
-        <p class="mb-0 mr-2">Ürün Puanınız * :</p>
-        <div class="text-primary">
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
-            <i class="far fa-star"></i>
+    <form id="commentForm" method="post" asp-action="AddComment" asp-controller="ProductList">
+        <div class="form-group">
+            <div class="d-flex my-3">
+                <p class="mb-0 mr-2">Ürün Puanınız * :</p>
+                <div class="text-primary" id="ratingStars">
+                    <i class="far fa-star star" data-index="1"></i>
+                    <i class="far fa-star star" data-index="2"></i>
+                    <i class="far fa-star star" data-index="3"></i>
+                    <i class="far fa-star star" data-index="4"></i>
+                    <i class="far fa-star star" data-index="5"></i>
+                </div>
+            </div>
         </div>
-    </div>
-    @* Buradaka bu form AddComment'e gidecek neredeki ProductList'deki *@
-    <form method="post" asp-action="AddComment" asp-controller="ProductList">
+        @* Buradaka bu form AddComment'e gidecek neredeki ProductList'deki *@
+
         <input type="hidden" value="@ViewBag.pid" name="ProductId" />
         <div class="form-group">
             <label for="name">Adınız Soyadınız *</label>
@@ -31,3 +34,64 @@
         </div>
     </form>
 </div>
+
+<script>
+    const stars = document.querySelectorAll('.star');
+
+    stars.forEach((star) => {
+        star.addEventListener('click', (e) => {
+            const clickedStarIndex = parseInt(e.target.getAttribute('data-index'));
+            stars.forEach((star, index) => {
+                if (index < clickedStarIndex) {
+                    star.classList.remove('far');
+                    star.classList.add('fas');
+                } else {
+                    star.classList.remove('fas');
+                    star.classList.add('far');
+                }
+            });
+        });
+    });
+</script>
+
+<script>
+    document.getElementById('commentForm').addEventListener('submit', function (event) {
+        event.preventDefault();
+
+
+        const stars = document.querySelectorAll('.star');
+        let rating = 0;
+        stars.forEach((star) => {
+            if (star.classList.contains('fas')) {
+                rating = star.getAttribute('data-index');
+            }
+        });
+
+
+        const formData = new FormData(this);
+        formData.append('rating', rating);
+
+
+        fetch('/ProductList/AddComment', {
+            method: 'POST',
+            body: formData
+        })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.json();
+            })
+            .then(data => {
+                if (data === true) {
+                    location.reload();
+                } else {
+                    console.error('Error: Comment could not be added.');
+                }
+
+            })
+            .catch(error => {
+                console.error('Error:', error);
+            });
+    });
+</script>
