--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_FeatureProductsDefaultComponentPartial/Default.cshtml
@@ -10,12 +10,12 @@
             <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                 <div class="product-item bg-light mb-4">
                     <div class="product-img position-relative overflow-hidden">
-                        <img class="img-fluid w-100" src="@item.ProductImageUrl" alt="">
+                        <img class="img-fluid w-100" style="width: 400px; height: 350px; object-fit: cover;" src="@item.ProductImageUrl" alt="">
                         <div class="product-action">
                             <a class="btn btn-outline-dark btn-square" href="/ShoppingCard/AddBasketItem/@item.ProductId"><i class="fa fa-shopping-cart"></i></a>
                             <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
                             <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                            <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                            <a class="btn btn-outline-dark btn-square" href="/ProductList/ProductDetail/@item.ProductId"><i class="fa fa-search"></i></a>
                         </div>
                     </div>
                     <div class="text-center py-4">
