--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_NavbarUILayoutComponentPartial/Default.cshtml
@@ -30,13 +30,13 @@
                     <div class="navbar-nav mr-auto py-0">
                         <a href="/Default/Index" class="nav-item nav-link">@localizer["Ana Sayfa"]</a>
                         <a href="/ProductList/Index" class="nav-item nav-link">@localizer["Ürünler"]</a>
-                        <a href="/ProductList/ProductDetail" class="nav-item nav-link">Ürün Detayları</a>
-                        <a href="detail.html" class="nav-item nav-link">Günün Fırsatı</a>
+@*                         <a href="/ProductList/ProductDetail" class="nav-item nav-link">Ürün Detayları</a> *@
+                        @* <a href="detail.html" class="nav-item nav-link">Günün Fırsatı</a> *@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sayfalar <i class="fa fa-angle-down mt-1"></i></a>
                             <div class="dropdown-menu bg-primary rounded-0 border-0 m-0">
                                 <a href="/ShoppingCard/Index/" class="dropdown-item">Sepetim</a>
-                                <a href="checkout.html" class="dropdown-item">Ödeme</a>
+                                <a href="/Payment/Index/" class="dropdown-item">Ödeme</a>
                                 <a href="/Register/Index/" class="dropdown-item">Kayıt Ol</a>
                                 <a href="/Login/Index/" class="dropdown-item">Giriş Yap</a>
                                 @if (ViewBag.isLogin)
