--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductListByCategoryIdComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductListByCategoryIdComponentPartial/Default.cshtml
@@ -1,21 +1,23 @@
 ﻿@model List<ResultProductWithCategoryDto>
 @foreach (var item in Model)
 {
+    // Fiyata %15 ekleme işlemi
+    decimal x = item.ProductPrice * 115 / 100;
     <div class="col-lg-4 col-md-6 col-sm-6 pb-1">
         <div class="product-item bg-light mb-4">
             <div class="product-img position-relative overflow-hidden">
                 <img class="img-fluid w-100" src="@item.ProductImageUrl" alt="">
                 <div class="product-action">
-                    <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
+                    <a class="btn btn-outline-dark btn-square" href="/ShoppingCard/AddBasketItem/@item.ProductId"><i class="fa fa-shopping-cart"></i></a>
                     <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
                     <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                    <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                    <a class="btn btn-outline-dark btn-square" href="/ProductList/ProductDetail/@item.ProductId"><i class="fa fa-search"></i></a>
                 </div>
             </div>
             <div class="text-center py-4">
                 <a class="h6 text-decoration-none text-truncate" href="/ProductList/ProductDetail/@item.ProductId">@item.ProductName</a>
                 <div class="d-flex align-items-center justify-content-center mt-2">
-                    <h5>@item.ProductPrice</h5><h6 class="text-muted ml-2"><del>000 ₺</del></h6>
+                    <h5>@item.ProductPrice</h5><h6 class="text-muted ml-2"><del>@x ₺</del></h6>
                 </div>
                 <div class="d-flex align-items-center justify-content-center mb-1">
                     <small class="fa fa-star text-primary mr-1"></small>
