--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ShoppingCartProductListComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ShoppingCartProductListComponentPartial/Default.cshtml
@@ -19,20 +19,20 @@
                     <td class="align-middle">
                         <div class="input-group quantity mx-auto" style="width: 100px;">
                             <div class="input-group-btn">
-                                <button class="btn btn-sm btn-primary btn-minus">
+                                <a class="btn btn-sm btn-primary btn-minus" href="/shoppingCard/remove/@item.ProductId">
                                     <i class="fa fa-minus"></i>
-                                </button>
+                                </a>
                             </div>
                             <input type="text" class="form-control form-control-sm bg-secondary border-0 text-center" value="@item.Quantity">
                             <div class="input-group-btn">
-                                <button class="btn btn-sm btn-primary btn-plus">
+                                <a class="btn btn-sm btn-primary btn-plus" href="/shoppingCard/add/@item.ProductId">
                                     <i class="fa fa-plus"></i>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </td>
                     <td class="align-middle">@item.Price ₺</td>
-                    <td class="align-middle"><a href="/ShoppingCard/RemoveBasketItem/@item.ProductId" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a></td>
+                    <td class="align-middle"><a href="/shoppingCard/removeAll/@item.ProductId" class="btn btn-sm btn-danger"><i class="fa fa-times"></i></a></td>
                 </tr>
             }
         </tbody>
