--- a/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
@@ -52,6 +52,9 @@
                             <label>Posta Kodu</label>
                             <input class="form-control" type="text" asp-for="ZipCode" placeholder="12345">
                         </div>
+                        <div class="col-md-6 form-group">
+                            <button class="btn btn-block btn-primary font-weight-bold py-3">Ödeme Adımına Geç</button>
+                        </div>
                     </div>
                 </form>
             </div>
