--- a/Frontends/MultiShop.WebUI/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/_ViewImports.cshtml
@@ -16,4 +16,6 @@
 @using MultiShop.DtoLayer.IdentityDtos.LoginDtos
 @using MultiShop.DtoLayer.BasketDtos
 @using MultiShop.DtoLayer.OrderDtos.OrderAddressDtos
+@using MultiShop.DtoLayer.OrderDtos.OrderOrderingDtos
+@using MultiShop.DtoLayer.OrderDtos.OrderDetailDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
