--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_OrderSummaryComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_OrderSummaryComponentPartial/Default.cshtml
@@ -14,17 +14,17 @@
     <div class="border-bottom pt-3 pb-2">
         <div class="d-flex justify-content-between mb-3">
             <h6>Alışveriş Tutarı</h6>
-            <h6>100 ₺</h6>
+            <h6>@ViewBag.total</h6>
         </div>
         <div class="d-flex justify-content-between">
             <h6 class="font-weight-medium">Kargo Ücreti</h6>
-            <h6 class="font-weight-medium">20 ₺</h6>
+            <h6 class="font-weight-medium">@ViewBag.cargoPrice ₺</h6>
         </div>
     </div>
     <div class="pt-2">
         <div class="d-flex justify-content-between mt-2">
             <h5>Genel Toplam</h5>
-            <h5>110 ₺</h5>
+            <h5>@ViewBag.totalPriceWithCargo</h5>
         </div>
     </div>
 </div>
