--- a/Frontends/MultiShop.WebUI/Areas/User/Views/MyOrder/MyOrderDetail.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/User/Views/MyOrder/MyOrderDetail.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model List<GetOrderDetailByOrderIdDto>
+
 @{
     ViewData["Title"] = "MyOrderDetail";
     Layout = "~/Areas/User/Views/UserLayout/Index.cshtml";
@@ -6,4 +7,49 @@
     string tableRowColor = "";
 }
 
-<h5>MyOrderDetail</h5>
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Sipariş Geçmişim</h4>
+                        <div class="table-responsive pt-3">
+                            <table class="table table-bordered">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Ürün Adı</th>
+                                        <th>Ürün Fiyatı</th>
+                                        <th>Ürün Adedi</th>
+                                        <th>Toplam Fiyat</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+                                    {
+                                        count++;
+                                        if (count == 1) { tableRowColor = "table-info"; }
+                                        if (count == 2) { tableRowColor = "table-warning"; }
+                                        if (count == 3) { tableRowColor = "table-danger"; }
+                                        if (count == 4) { tableRowColor = "table-success"; }
+                                        if (count == 5) { tableRowColor = "table-primary"; }
+                                        if (count == 6) { tableRowColor = "table-dark"; }
+                                        if (count == 7) { tableRowColor = "table-secondary"; }
+                                        <tr class="@tableRowColor">
+                                            <th>@count</th>
+                                            <td>@item.ProductName</td>
+                                            <td>@item.ProductPrice</td>
+                                            <td>@item.ProductAmount</td>
+                                            <td>@item.ProductTotalPrice</td>
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
