--- a/Frontends/MultiShop.WebUI/Areas/User/Views/_ViewImports.cshtml
+++ b/Frontends/MultiShop.WebUI/Areas/User/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using MultiShop.WebUI
 @using MultiShop.WebUI.Models
 @using MultiShop.DtoLayer.OrderDtos.OrderOrderingDtos
+@using MultiShop.DtoLayer.OrderDtos.OrderDetailDtos
 @using MultiShop.DtoLayer.MessageDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
