--- a/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Order/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-8">
-            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Billing Address</span></h5>
+            <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Addres Bilgileriniz</span></h5>
             <div class="bg-light p-30 mb-5">
                 <form method="post">
                     <div class="row">
