--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_PaymentMethodComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_PaymentMethodComponentPartial/Default.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="mb-5">
+﻿@* <div class="mb-5">
     <h5 class="section-title position-relative text-uppercase mb-3"><span class="bg-secondary pr-3">Ödeme Yöntemini Seçin</span></h5>
     <div class="bg-light p-30">
         <div class="form-group">
@@ -27,4 +27,4 @@
         </div>
         <button class="btn btn-block btn-primary font-weight-bold py-3">Ödeme Adımına Geç</button>
     </div>
-</div>
+</div> *@
