--- a/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailFeatureComponentPartial/Default.cshtml
+++ b/Frontends/MultiShop.WebUI/Views/Shared/Components/_ProductDetailFeatureComponentPartial/Default.cshtml
@@ -95,9 +95,10 @@
                     </button>
                 </div>
             </div>
-            <button class="btn btn-primary px-3">
+            <a href="/ShoppingCard/AddBasketItem/@Model.ProductId" class="btn btn-primary px-3">
                 <i class="fa fa-shopping-cart mr-1"></i> Sepete Ekle
-            </button>
+            </a>
+
         </div>
 
         <div class="d-flex pt-2">
